--- a/src/assists/views/mainmenu.fxml
+++ b/src/assists/views/mainmenu.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="260.0" layoutY="221.0" mnemonicParsing="false" text="Start Game" />
-      <TextField alignment="CENTER" layoutX="224.0" layoutY="188.0" promptText="Enter Game Code" />
-      <Text layoutX="260.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Risk!">
+      <Button layoutX="262.0" layoutY="340.0" mnemonicParsing="false" text="Start Game" />
+      <TextField layoutX="225.0" layoutY="293.0" promptText="Enter Username" />
+      <Text layoutX="261.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Risk!">
          <font>
             <Font size="38.0" />
          </font>
