--- a/src/assists/views/mainmenu.fxml
+++ b/src/assists/views/mainmenu.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartMenuView">
    <children>
-      <Button layoutX="262.0" layoutY="340.0" mnemonicParsing="false" text="Start Game" />
-      <TextField layoutX="225.0" layoutY="293.0" promptText="Enter Username" />
+      <Button id="startGameButton" layoutX="262.0" layoutY="340.0" mnemonicParsing="false" onMouseClicked="#startGamePressed" text="Start Game" />
+      <TextField fx:id="enteredName" layoutX="225.0" layoutY="293.0" promptText="Enter Username" />
       <Text layoutX="261.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Risk!">
          <font>
             <Font size="38.0" />
