--- a/src/assists/views/gamemenu.fxml
+++ b/src/assists/views/gamemenu.fxml
@@ -5,10 +5,10 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" text="Button" />
-      <Button layoutX="562.0" layoutY="14.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" text="Button" />
-      <Button layoutX="562.0" layoutY="361.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" text="Button" />
-      <Button layoutX="10.0" layoutY="367.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" text="Button" />
+      <Button id="settingsButton" fx:id="settingsButton" layoutX="10.0" layoutY="14.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" />
+      <Button id="helpButton" fx:id="helpButton" layoutX="562.0" layoutY="14.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" />
+      <Button fx:id="cardsButton" layoutX="562.0" layoutY="361.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" />
+      <Button fx:id="playerListButton" layoutX="10.0" layoutY="367.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" />
       <Button layoutX="257.0" layoutY="349.0" mnemonicParsing="false" text="ActionButton" />
    </children>
 </Pane>
