--- a/src/main/resources/mainmenu.fxml
+++ b/src/main/resources/mainmenu.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartMenuView">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainMenuController">
    <children>
       <Button id="startGameButton" layoutX="462.0" layoutY="695.0" mnemonicParsing="false" onMouseClicked="#startGamePressed" text="Start Game" />
       <TextField fx:id="enteredName" layoutX="426.0" layoutY="653.0" promptText="Enter Username" />
