--- a/src/main/resources/gamemenu.fxml
+++ b/src/main/resources/gamemenu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -11,5 +12,6 @@
             <Image url="@settings-3110.png" />
          </image>
       </ImageView>
+      <Canvas height="800.0" width="1000.0" />
    </children>
 </Pane>
