--- a/src/main/resources/gamemenu.fxml
+++ b/src/main/resources/gamemenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -13,5 +14,6 @@
             <Image url="@settings-3110.png" />
          </image>
       </ImageView>
+      <Button layoutX="432.0" layoutY="490.0" mnemonicParsing="false" onMouseClicked="#rollDice" text="Roll Dice!" />
    </children>
 </Pane>
