--- a/src/main/resources/gamemenu.fxml
+++ b/src/main/resources/gamemenu.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -15,5 +16,6 @@
          </image>
       </ImageView>
       <Button layoutX="432.0" layoutY="490.0" mnemonicParsing="false" onMouseClicked="#rollDice" text="Roll Dice!" />
+      <Label fx:id="diceRollLabel" layoutX="451.0" layoutY="459.0" />
    </children>
 </Pane>
